--- a/main.css
+++ b/main.css
@@ -1,4 +1,11 @@
 @import 'https://fonts.googleapis.com/css?family=Black+Ops+One|Roboto';
+* {
+	font-family: 'Roboto';
+}
+
+small {
+	font-family: monospace;
+}
 
 .center {
 	text-align: center;
@@ -9,11 +16,27 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Black Ops One';
 }
 
-p {
-	font-family: 'Roboto';
+.post {
+	background-color: grey;
+	padding: 20px;
+	margin-bottom: 2px;
 }
 
 .post-snippet {
-	background-color: grey;
-	padding: 20px;
+}
+
+.post-content {
+	display: none;
+}
+
+#signal-01 {
+	display: none;
+}
+
+#show-all {
+	background-color: #f93920;
+	padding: 5px;
+	text-decoration: none;
+	color: white;
+	font-family: 'Roboto';
 }
