--- a/main.css
+++ b/main.css
@@ -41,6 +41,10 @@ h1, h2, h3, h4, h5, h6 {
 	display: none;
 }
 
+#nsa-halt-01 {
+	display: none;
+}
+
 #show-all {
 	background-color: #f93920;
 	padding: 5px;
