New post about new CWCOA revisions

--- a/main.css
+++ b/main.css
@@ -45,6 +45,10 @@ h1, h2, h3, h4, h5, h6 {
 	display: none;
 }
 
+#dead-bill-alive-01 {
+
+}
+
 #show-all {
 	background-color: #f93920;
 	padding: 5px;
