New post "After Trump: Interest in Encrypted Services Spikes"

--- a/main.css
+++ b/main.css
@@ -49,6 +49,10 @@ h1, h2, h3, h4, h5, h6 {
 
 }
 
+#trump-crypto-01 {
+	display: none;
+}
+
 #show-all {
 	background-color: #f93920;
 	padding: 5px;
