New post: I'm Working on an App

--- a/main.css
+++ b/main.css
@@ -16,6 +16,10 @@ h1, h2, h3, h4, h5, h6 {
 	font-family: 'Black Ops One';
 }
 
+code {
+	font-family: monospace;
+}
+
 .post {
 	background-color: grey;
 	padding: 20px;
